--- a/Employee_Retention_Prediction.ipynb
+++ b/Employee_Retention_Prediction.ipynb
@@ -25,51 +25,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "M27qF7CTrBqc"
-      },
-      "source": [
-        "# TASK #1: UNDERSTAND THE PROBLEM STATEMENT AND BUSINESS CASE"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xNl52nl3qiyL"
-      },
-      "source": [
-        "![alt text](https://drive.google.com/uc?id=10NJUOTWOBzp2MNkgcPpCF0fLtdoN_jKj)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "qANsbnOpp6Ft"
-      },
-      "source": [
-        "![alt text](https://drive.google.com/uc?id=1evbDHoW2t0emxkbQd8yevYFZ5woJKRPY)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ladNLq1WqDY6"
-      },
-      "source": [
-        "![alt text](https://drive.google.com/uc?id=1Mk2H7VYfv6ijUS9XqEdBQV6_LaHiyvkJ)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "uAE6Icc0uylP"
-      },
-      "source": [
-        "# TASK #2: IMPORT LIBRARIES AND DATASETS"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "YBp2qDPb8pDo"
@@ -80,7 +35,7 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,13 +48,10 @@
         "outputId": "3e178e44-77d0-4dc6-f5ca-ac618654228a"
       },
       "source": [
-        "# You will need to mount your drive using the following commands:\n",
-        "# For more information regarding mounting, please check this out: https://stackoverflow.com/questions/46986398/import-data-into-google-colaboratory\n",
-        "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,10 +68,9 @@
         "id": "tjIiJdM4u1IE"
       },
       "source": [
-        "# You have to include the full link to the csv file containing your dataset\n",
         "employee_df = pd.read_csv('/content/drive/My Drive/Data Science Projects/Human_Resources.csv')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +86,7 @@
       "source": [
         "employee_df"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -656,7 +607,7 @@
       "source": [
         "employee_df.info()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -721,7 +672,7 @@
       "source": [
         "employee_df.describe()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1032,23 +983,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "s0E9xPLdx2Ok"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "LlszUhNNyrl_"
       },
       "source": [
-        "# TASK #3: VISUALIZE DATASET"
+        "VISUALIZE DATASET"
       ]
     },
     {
@@ -1062,7 +1002,7 @@
         "employee_df['Over18'] = employee_df['Over18'].apply(lambda x:1 if x == 'Y' else 0)\n",
         "employee_df['OverTime'] = employee_df['OverTime'].apply(lambda x:1 if x == 'Yes' else 0)\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1078,7 +1018,7 @@
       "source": [
         "employee_df"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1598,10 +1538,10 @@
         "outputId": "b6f16fd8-86ee-4cf2-98d7-7f7f2ba103ac"
       },
       "source": [
-        "# Let's see if we have any missing data, luckily we don't!\n",
+        "# Let's see if we have any missing data\n",
         "sns.heatmap(employee_df.isnull(), yticklabels = False, cbar = False, cmap = 'Blues')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1645,7 +1585,7 @@
         "# Several features such as 'MonthlyIncome' and 'TotalWorkingYears' are tail heavy\n",
         "# It makes sense to drop 'EmployeeCount' and 'Standardhours' since they do not change from one employee to the other"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1714,7 +1654,7 @@
         "# Let's drop 'EmployeeNumber' as well\n",
         "employee_df.drop(['EmployeeCount', 'StandardHours', 'Over18', 'EmployeeNumber'], axis = 1, inplace = True)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1727,7 +1667,7 @@
         "left_df = employee_df[employee_df['Attrition'] == 1]\n",
         "stayed_df = employee_df[employee_df['Attrition'] == 0]"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1750,7 +1690,7 @@
         "print(\"Number of employees who did not leave the company (stayed) =\", len(stayed_df))\n",
         "print(\"Percentage of employees who did not leave the company (stayed) =\", 1.*len(stayed_df)/len(employee_df)*100.0, \"%\")"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1776,16 +1716,9 @@
         "outputId": "6cc7648a-1f67-4eda-f3f7-0e0710b2c8d2"
       },
       "source": [
-        "left_df.describe()\n",
-        "\n",
-        "#  Let's compare the mean and std of the employees who stayed and left \n",
-        "# 'age': mean age of the employees who stayed is higher compared to who left\n",
-        "# 'DailyRate': Rate of employees who stayed is higher\n",
-        "# 'DistanceFromHome': Employees who stayed live closer to home \n",
-        "# 'EnvironmentSatisfaction' & 'JobSatisfaction': Employees who stayed are generally more satisifed with their jobs\n",
-        "# 'StockOptionLevel': Employees who stayed tend to have higher stock option level"
+        "left_df.describe()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2099,7 +2032,7 @@
       "source": [
         "stayed_df.describe()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2415,7 +2348,7 @@
         "f, ax = plt.subplots(figsize = (20,20))\n",
         "sns.heatmap(correlations, annot = True)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2462,7 +2395,7 @@
         "# Monthly income is strongly correlated with total working hours\n",
         "# Age is stongly correlated with monthly income\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2512,7 +2445,7 @@
         "plt.subplot(414)\n",
         "sns.countplot(x= 'JobLevel', hue = 'Attrition', data = employee_df)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2547,14 +2480,12 @@
         "id": "jpJtiorsjgfI"
       },
       "source": [
-        "\n",
-        "\n",
         "# Single employees tend to leave compared to married and divorced\n",
         "# Sales Representitives tend to leave compared to any other job \n",
         "# Less involved employees tend to leave the company \n",
         "# Less experienced (low job level) tend to leave the company "
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2578,7 +2509,7 @@
         "plt.xlabel('Distance From Home')\n",
         "plt.legend()\n"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2626,7 +2557,7 @@
         "plt.xlabel('Years With Current Manager')\n",
         "plt.legend()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2675,7 +2606,7 @@
         "plt.xlabel('Total Working Years')\n",
         "plt.legend()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2718,7 +2649,7 @@
         "# Let's see the Gender vs. Monthly Income\n",
         "sns.boxplot(x = 'MonthlyIncome', y = 'Gender', data = employee_df)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2762,7 +2693,7 @@
         "plt.figure(figsize=(15, 10))\n",
         "sns.boxplot(x = 'MonthlyIncome', y = 'JobRole', data = employee_df)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2797,7 +2728,7 @@
         "id": "Y0GmpAjG3GiH"
       },
       "source": [
-        "# TASK #4: CREATE TESTING AND TRAINING DATASET & PERFORM DATA CLEANING"
+        "CREATE TESTING AND TRAINING DATASET & PERFORM DATA CLEANING"
       ]
     },
     {
@@ -2813,7 +2744,7 @@
       "source": [
         "employee_df.head(3)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3001,7 +2932,7 @@
       "source": [
         "X_cat = employee_df[['BusinessTravel', 'Department', 'EducationField', 'Gender', 'JobRole', 'MaritalStatus' ]]"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3017,7 +2948,7 @@
       "source": [
         "X_cat"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3188,7 +3119,7 @@
         "onehotencoder = OneHotEncoder()\n",
         "X_cat = onehotencoder.fit_transform(X_cat).toarray()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3203,7 +3134,7 @@
       "source": [
         "X_cat.shape"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3233,7 +3164,7 @@
         "X_cat = pd.DataFrame(X_cat) \n",
         "X_cat"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3649,7 +3580,7 @@
         "X_numerical = employee_df[['Age', 'DailyRate', 'DistanceFromHome',\t'Education', 'EnvironmentSatisfaction', 'HourlyRate', 'JobInvolvement',\t'JobLevel',\t'JobSatisfaction',\t'MonthlyIncome',\t'MonthlyRate',\t'NumCompaniesWorked',\t'OverTime',\t'PercentSalaryHike', 'PerformanceRating',\t'RelationshipSatisfaction',\t'StockOptionLevel',\t'TotalWorkingYears'\t,'TrainingTimesLastYear'\t, 'WorkLifeBalance',\t'YearsAtCompany'\t,'YearsInCurrentRole', 'YearsSinceLastPromotion',\t'YearsWithCurrManager']]\n",
         "X_numerical"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4040,7 +3971,7 @@
         "X_all = pd.concat([X_cat, X_numerical], axis = 1)\n",
         "X_all"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4739,7 +4670,7 @@
         "scaler = MinMaxScaler()\n",
         "X = scaler.fit_transform(X_all)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4755,7 +4686,7 @@
         "y = employee_df['Attrition']\n",
         "y"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4785,24 +4716,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ASEus5N81Zq8"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 24,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "RgFq3h993cIz"
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size =0.25)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4817,7 +4737,7 @@
       "source": [
         "X_train.shape"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4845,7 +4765,7 @@
       "source": [
         "X_test.shape"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4875,7 +4795,7 @@
         "\n",
         "y_pred = model.predict(X_test)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4890,7 +4810,7 @@
       "source": [
         "y_pred"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4936,7 +4856,7 @@
         "\n",
         "print(\"Accuracy {} %\".format( 100 * accuracy_score(y_pred, y_test)))"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4962,7 +4882,7 @@
         "cm = confusion_matrix(y_pred, y_test)\n",
         "sns.heatmap(cm, annot=True)\n"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5003,7 +4923,7 @@
       "source": [
         "print(classification_report(y_test, y_pred))"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5028,7 +4948,7 @@
         "id": "o0LevjwDP3Zk"
       },
       "source": [
-        "# TASK #8: TRAIN AND EVALUATE A RANDOM FOREST CLASSIFIER"
+        "TRAIN AND EVALUATE A RANDOM FOREST CLASSIFIER"
       ]
     },
     {
@@ -5046,7 +4966,7 @@
         "model = RandomForestClassifier()\n",
         "model.fit(X_train, y_train)\n"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5077,7 +4997,7 @@
       "source": [
         "y_pred = model.predict(X_test)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5095,7 +5015,7 @@
         "cm = confusion_matrix(y_pred, y_test)\n",
         "sns.heatmap(cm, annot=True)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5136,7 +5056,7 @@
       "source": [
         "print(classification_report(y_test, y_pred))"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
